GCA-14 Implement unit tests coverage - Improve test coverage